--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-pyrogram==2.0.30
+pyrofork==2.3.43
 tgcrypto
 pymongo[srv]==3.12.3
 motor==2.5.1
 marshmallow==3.14.1
 umongo==3.0.1
 dnspython==2.3.0
-pyrofork
 requests
 bs4
 pytz
